Added limit for JVM Heap inside docker + Updated submodules